# simple-safety-synth

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  a.txt  conanfile.txt  main.cpp
.github/workflows/: build-develop.yml  build-main.yml  build.yml  cmake-multi-platform.yml
aiger/: Makefile
cudd/nanotrav/: nanotrav
examples/co-safety/modules/: test1.smv  test10.smv  test11.smv  test12.smv  test13.smv  test14.smv  test15.smv  test16.smv  test17.smv  test18.smv  test19.smv  test2.smv  test20.smv  test21.smv  test23.smv  test24.smv  test25.smv  test26.smv  test27.smv  test28.smv  test29.smv  test3.smv  test30.smv  test31.smv  test32.smv  test33.smv  test34.smv  test35.smv  test36.smv  test37.smv  test38.smv  test39.smv  test4.smv  test40.smv  test41.smv  test42.smv  test43.smv  test44.smv  test45.smv  test46.smv  (+13 more)
examples/co-safety/realizable/: test12.aag  test14.aag  test17.aag  test18.aag  test19.aag  test21.aag  test22.aag  test23.aag  test25.aag  test26.aag  test27.aag  test28.aag  test29.aag  test3.aag  test30.aag  test31.aag  test32.aag  test33.aag  test34.aag  test35.aag  test37.aag  test38.aag  test4.aag  test40.aag  test41.aag  test42.aag  test43.aag  test44.aag  test45.aag  test46.aag  test47.aag  test48.aag  test49.aag  test50.aag  test51.aag  test52.aag  test53.aag  test54.aag  test6.aag
examples/co-safety/unrealizable/: test10.aag  test11.aag  test13.aag  test15.aag  test16.aag  test2.aag  test20.aag  test24.aag  test36.aag  test39.aag  test5.aag  test7.aag  test8.aag  test9.aag
examples/modules/: test10.smv  test17.smv  test20.smv  test21.smv  test24.smv  test25.smv  test26.smv  test27.smv  test29.smv  test3.smv  test31.smv  test38.smv  test39.smv  test41.smv  test47.smv  test49.smv  test5.smv  test52.smv
examples/realizable/: test1.aag  test12.aag  test14.aag  test14.smv.aag  test17.smv.aag  test18.aag  test19.aag  test21.aag  test21.smv.aag  test22.aag  test22.smv.aag  test23.aag  test26.aag  test27.aag  test28.smv.aag  test29.aag  test29.smv.aag  test3.aag  test30.aag  test31.aag  test32.aag  test32.smv.aag  test33.aag  test33.smv.aag  test35.aag  test35.smv.aag  test37.smv.aag  test38.aag  test4.smv.aag  test40.smv.aag  test41.aag  test41.smv.aag  test43.smv.aag  test44.aag  test45.aag  test46.aag  test47.aag  test48.aag  test49.aag  test49.smv.aag  (+6 more)
examples/safety/modules/: test11.smv  test12.smv  test13.smv  test15.smv  test16.smv  test18.smv  test2.smv  test23.smv  test30.smv  test34.smv  test36.smv  test4.smv  test40.smv  test42.smv  (+7 more)
examples/solved/: test1.aag  test1.smv.aag  test12.smv.aag  test14.aag  test14.smv.aag  test17.smv.aag  test18.smv.aag  test19.smv.aag  test21.smv.aag  test22.aag  test22.smv.aag  test23.aag  test23.smv.aag  test26.aag  test26.smv.aag  test27.smv.aag  test28.smv.aag  test29.smv.aag  test3.aag  test3.smv.aag  test30.smv.aag  test31.smv.aag  test32.smv.aag  test33.smv.aag  test35.smv.aag  test37.aag  test37.smv.aag  test38.aag  test38.smv.aag  test4.aag  test4.smv.aag  test40.smv.aag  test41.aag  test41.smv.aag  test43.aag  test43.smv.aag  test44.aag  test44.smv.aag  test45.aag  test45.smv.aag  (+16 more)
examples/unrealizable/: test10.smv.aag  test11.aag  test13.aag  test15.aag  test16.aag  test2.aag  test20.smv.aag  test24.aag  test24.smv.aag  test25.aag  test34.smv.aag  test36.aag  test36.smv.aag  test39.smv.aag  test42.smv.aag  test5.aag  test5.smv.aag  test7.aag  test8.aag  test9.aag  test9.smv.aag
safety-arena/: BDD2Aiger.h  SafetyArena.cpp  SafetyArena.h  aiger-utils.cpp  aiger-utils.h
safety-solver/: BDD2Aiger.cpp  BDD2Aiger.h  BetterSafetySolver.cpp  BetterSafetySolver.h  GFPSafetySolver.cpp  SafetySolver.cpp  SafetySolver.h  SimpleCoSafetySolver.cpp  SimpleCoSafetySolver.h  SimpleSafetySolver.cpp  SimpleSafetySolver.h
src/safety-arena/: SafetyArena.cpp  SafetyArena.h
src/safety-solver/: BDD2Aiger.cpp  GFPSafetySolver.h  GameSolver.cpp  GameSolver.h  SimpleCoSafetySolver.cpp  SimpleCoSafetySolver.h  SimpleSafetySolver.cpp
src/solvers/: SimpleCoSafetySolver.cpp  SimpleCoSafetySolver.h  SimpleCoSafetySolver2.cpp  SimpleCoSafetySolver2.h  SimpleSafetySolver.h
src/utils/: aiger.cpp  aiger.h  aiger2smv.cpp
tests/system/: co-safety-system-test.sh  run-system-test.sh  safety-system-test.sh  test12.commands.txt  test28.commands.txt
utils/: aiger-utils.cpp  aiger-utils.h  aiger.cpp  aiger.h  aiger2smv.cpp
(+75 files in other folders)
